--- a/layouts/ctf/list.html
+++ b/layouts/ctf/list.html
@@ -2,7 +2,7 @@
   <h1>CTF Writeups</h1>
   <ul>
   {{ range .Pages }}
-    <li>
+    <li class="content-ctf-il">
       <a href="{{ .Permalink }}">{{ .Title }}</a> - {{ .Date.Format "2. January, 2006" }}
     </li>
   {{ end }}
