Update class name from .thm-info to .thm-card Update readme

--- a/layouts/ctf/list.html
+++ b/layouts/ctf/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <h1>CTF Writeups</h1>
-  <div class="thm-info"><script src="https://tryhackme.com/badge/1092131"></script></div>
+  <div class="thm-card"><script src="https://tryhackme.com/badge/1092131"></script></div>
   <ul>
   {{ range .Pages }}
     <li class="content-ctf-il">
